gcc/testsuite/rust/compile/target_feature-malformed-4233.rs
// { dg-error "malformed `target_feature` attribute input" }
#[target_feature]
unsafe fn foo_sse() {}
